--- a/Bocchi/Bocchi.csproj
+++ b/Bocchi/Bocchi.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.5.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0"/>
+        <PackageReference Include="OpenAI" Version="1.7.2"/>
     </ItemGroup>
 
     <ItemGroup>
