✨ Custom prefixes and mention prefix

--- a/Bocchi/Data/sample.config.json
+++ b/Bocchi/Data/sample.config.json
@@ -1,6 +1,7 @@
 ﻿{
   "VERSION": "v1.0.0",
   "DEBUG_MODE": true,
+  "PREFIX": "!",
   "TOKEN": "DISCORD_BOT_TOKEN",
   "OPENAI_API_KEY": "OPENAI_TOKEN"
 }
