--- a/Bocchi/Bocchi.csproj
+++ b/Bocchi/Bocchi.csproj
@@ -9,13 +9,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Betalgo.OpenAI" Version="7.0.0" />
         <PackageReference Include="Discord.Net" Version="3.10.0" />
         <PackageReference Include="Fergun.Interactive" Version="1.7.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.5.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-        <PackageReference Include="OpenAI" Version="1.7.2" />
     </ItemGroup>
 
     <ItemGroup>
