--- a/Bocchi/Data/sample.config.json
+++ b/Bocchi/Data/sample.config.json
@@ -3,5 +3,7 @@
   "DEBUG_MODE": true,
   "PREFIX": "!",
   "TOKEN": "DISCORD_BOT_TOKEN",
-  "OPENAI_API_KEY": "OPENAI_TOKEN"
+  "OPENAI_API_KEY": "OPENAI_TOKEN",
+  "MONGODB_USERNAME": "USERNAME",
+  "MONGODB_PASSWORD": "PASSWORD"
 }
