--- a/Bocchi/Bocchi.csproj
+++ b/Bocchi/Bocchi.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
     </ItemGroup>
 
     <ItemGroup>
